--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-native": "^4.3.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^2.1.1",
     "redux": "^4.0.0"
   },
   "scripts": {
